--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 /* 62.5% equivalent 10 pixel */
 html{
     font-size: 62.5%;
-    background-color: red;
+    background-color: green;
 }
 body{
     width: 100%;   
@@ -1153,4 +1153,11 @@ textarea{
     font-size: 20px;
     color: white;
     margin-top: 20px;
+}
+
+
+
+#titleBootcamps{
+    font-size: 20px;
+    color: white;
 }
