agregación de tabla y modificación de index

--- a/css/style.css
+++ b/css/style.css
@@ -1154,3 +1154,10 @@ textarea{
     color: white;
     margin-top: 20px;
 }
+
+#tableMaria{
+    border: 4px solid black;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
