--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: grey;
+    background-color: green;
     color: white;
     font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
